--- a/idex.html
+++ b/idex.html
@@ -3,9 +3,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin View</title>
+    <title>USA Emergency Reporting</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #D90000;
+            color: white;
+            text-align: center;
+            padding: 10px;
+        }
+
+        .box {
+            border: 1px solid #ccc;
+            margin: 10px;
+            padding: 10px;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        #remarkInput {
+            width: 100%;
+            padding: 5px;
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 <body>
-    
+    <header>
+        <h1>USA Emergency Reporting</h1>
+    </header>
+
+    <div class="box">
+        <p>Dec. 09, 2023 7:00AM</p>
+        <p>Emergency Type: Health Emergency</p>
+        <p>Details: Someone passed out at the grounds</p>
+        <p>Location: Open field near soccer goal</p>
+        <p>Image Link: <a href="https://images.pexels.com/photos/114296/pexels-photo-114296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" target="_blank">View Image</a></p>
+    </div>
+
+    <div class="box">
+        <div>
+            <label for="remarkInput">Enter Remark:</label>
+            <input type="text" id="remarkInput" onkeypress="handleKeyPress(event)">
+        </div>
+        <p id="remarkText"></p>
+    </div>
+
+    <div class="box">
+        <p>Date: Dec. 08, 2023 6:23PM</p>
+        <p>Emergency Type: Security Emergency</p>
+        <p>Details: Saw someone with a sharp object  at his backpack, he has a brown bag and he is around 5'5 tall/p>
+        <p>Location: 2nd floor Rada Hall</p>
+        <p>Image Link: <a href="https://images.pexels.com/photos/114296/pexels-photo-114296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" target="_blank">View Image</a></p>
+    </div>
+
+    <div class="box">
+        <div>
+            <label for="remarkInput">Enter Remark:</label>
+            <input type="text" id="remarkInput" onkeypress="handleKeyPress(event)">
+        </div>
+        <p id="remarkText"></p>
+    </div>
+
+    <div class="box">
+        <p>Date: Dec. 09, 2023</p>
+        <p>Emergency Type: Health Emergency</p>
+        <p>Details: Someone passed out at the grounds</p>
+        <p>Location: Open field near soccer goal</p>
+        <p>Image Link: <a href="https://images.pexels.com/photos/114296/pexels-photo-114296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" target="_blank">View Image</a></p>
+    </div>
+
+    <div class="box">
+        <div>
+            <label for="remarkInput">Enter Remark:</label>
+            <input type="text" id="remarkInput" onkeypress="handleKeyPress(event)">
+        </div>
+        <p id="remarkText"></p>
+    </div>
+
+    <div class="box">
+        <p>Date: Dec. 09, 2023</p>
+        <p>Emergency Type: Health Emergency</p>
+        <p>Details: Someone passed out at the grounds</p>
+        <p>Location: Open field near soccer goal</p>
+        <p>Image Link: <a href="https://images.pexels.com/photos/114296/pexels-photo-114296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" target="_blank">View Image</a></p>
+    </div>
+
+    <div class="box">
+        <div>
+            <label for="remarkInput">Enter Remark:</label>
+            <input type="text" id="remarkInput" onkeypress="handleKeyPress(event)">
+        </div>
+        <p id="remarkText"></p>
+    </div>
+
+    <script>
+        function handleKeyPress(event) {
+            if (event.key === 'Enter') {
+                const remarkInput = document.getElementById('remarkInput');
+                const remarkText = document.getElementById('remarkText');
+                remarkText.innerText = remarkInput.value;
+                remarkInput.value = '';
+            }
+        }
+    </script>
 </body>
 </html>
