update some template

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>Emergency Type: Security Emergency</p>
         <p>Details: Saw someone with a sharp object  at his backpack, he has a brown bag and he is around 5'5 tall/p>
         <p>Location: 2nd floor Rada Hall</p>
-        <p>Image Link: <a href="https://images.pexels.com/photos/114296/pexels-photo-114296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" target="_blank">View Image</a></p>
+        <p>Image Link: <a href="https://images.pexels.com/photos/2599276/pexels-photo-2599276.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" target="_blank">View Image</a></p>
     </div>
 
     <div class="box">
@@ -74,11 +74,11 @@
     </div>
 
     <div class="box">
-        <p>Date: Dec. 09, 2023</p>
-        <p>Emergency Type: Health Emergency</p>
-        <p>Details: Someone passed out at the grounds</p>
-        <p>Location: Open field near soccer goal</p>
-        <p>Image Link: <a href="https://images.pexels.com/photos/114296/pexels-photo-114296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" target="_blank">View Image</a></p>
+        <p>Date: Dec. 08, 2023 4:00PM</p>
+        <p>Emergency Type: Others; fell broken legs stairs</p>
+        <p>Details: help</p>
+        <p>Location: Rada 3rd floor</p>
+        <p>Image Link: </p>
     </div>
 
     <div class="box">
