update more template

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
     </div>
 
     <div class="box">
-        <p>Date: Dec. 09, 2023</p>
-        <p>Emergency Type: Health Emergency</p>
-        <p>Details: Someone passed out at the grounds</p>
-        <p>Location: Open field near soccer goal</p>
-        <p>Image Link: <a href="https://images.pexels.com/photos/114296/pexels-photo-114296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" target="_blank">View Image</a></p>
+        <p>Date: Dec. 08, 2023 9:33AM</p>
+        <p>Emergency Type: Facility Emergency</p>
+        <p>Details: Broken water pipe at Men's CR in the 3rd cubicle, gabha na di around 1 inch</p>
+        <p>Location: CR Gym</p>
+        <p>Image Link: <a href="https://images.pexels.com/photos/10631759/pexels-photo-10631759.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" target="_blank">View Image</a></p>
     </div>
 
     <div class="box">
