--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             padding: 10px;
         }
 
+        .logo{
+            width: 10em;
+        }
+
         img {
             max-width: 100%;
             height: auto;
@@ -38,7 +42,7 @@
 </head>
 <body>
     <header>
-        <img src="https://upload.wikimedia.org/wikipedia/en/e/e7/University_of_San_Agustin_Logo.png">
+        <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/e/e7/University_of_San_Agustin_Logo.png">
         <h1>USA Emergency Reporting</h1>
     </header>
 
